--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <script src="index.ts"></script>
+  <script src="./index.js" href="./index.ts" type="module"></script>
 </head>
 
 <body>
