--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,15 @@
 <head>
   <meta charset="utf-8">
   <script src="./index.js" href="./index.ts" type="module"></script>
+  <title>Copy as HTML</title>
+  <meta name="viewport" content="width=device-width, initial-scale=0.75">
+  <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-  <button>Copy as HTML</button>
-  <span class="status"></span>
-  <br>
-  <textarea></textarea>
+  <h1><button>📋Copy as HTML <span class="status"></span></button>
+  </h1>
+  <textarea placeholder="HTML source here"></textarea>
 </body>
 
 </html>
